Nav bar left align fixed

--- a/src/assets/styles/faq.css
+++ b/src/assets/styles/faq.css
@@ -23,6 +23,6 @@
     color:gray;
     text-decoration: none;
 }
-.collapse,.collapsing .card-body{
+.collapse.faq,.collapsing.faq .card-body{
     text-align: left;
 }
